# poisson

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  compile_commands.json  host  pack
arch_playground/: Cargo.toml
arch_playground/src/: main.rs
cs418_flight/: Cargo.toml  index.html
cs418_flight/assets/shaders/: lit_colored_mesh.slang
cs418_flight/src/: lib.rs  main.rs
cs418_logo/: Cargo.toml  index.html
cs418_logo/assets/shaders/: colored_mesh.slang  colored_mesh.wgsl  triangle.wgsl
cs418_logo/src/: lib.rs  main.rs
cs418_orbits/: Cargo.toml  index.html
cs418_orbits/src/: lib.rs  main.rs
cs418_terrain/: Cargo.toml  index.html
cs418_terrain/assets/shaders/: lit_colored_mesh.slang  lit_colored_mesh.wgsl
cs418_terrain/src/: lib.rs  main.rs  mesh.rs
cs418_texture/: Cargo.toml  index.html
cs418_texture/assets/shaders/: lit_colored_mesh.slang  lit_colored_mesh.wgsl  textured_mesh.slang  textured_mesh.wgsl
cs418_texture/src/: lib.rs  main.rs  mesh.rs
macros/poisson_macros/src/: lib.rs
nothing_game/: Cargo.toml  index.html
nothing_game/assets/shaders/: triangle.slang
nothing_game/src/: lib.rs  main.rs
poisson_macros/: Cargo.toml
poisson_macros/src/: lib.rs
poisson_renderer/: Cargo.toml  build.rs  index.html
poisson_renderer/src/: egui.rs  input.rs  lib.rs  utils.rs  windowing.rs
poisson_renderer/src/game_elements/: camera.rs
poisson_renderer/src/math/: mod.rs  utils.rs
poisson_renderer/src/render_backend/: mod.rs  per_vertex.rs
poisson_renderer/src/render_backend/draw/: mod.rs  textured_mesh.rs
poisson_renderer/src/render_backend/math/: mod.rs
poisson_renderer/src/render_backend/render_interface/: drawlets.rs  mod.rs  resources.rs
poisson_renderer/src/render_backend/render_interface/drawlets/: colored_mesh.rs  lit_colored_mesh.rs  mod.rs  textured_mesh.rs
poisson_renderer/src/render_backend/vulkan/: buffer.rs  device.rs  framebuffer.rs  img.rs  instance.rs  mod.rs  physical_surface.rs  pipeline.rs  render_pass.rs  swapchain.rs  texture.rs  utils.rs
poisson_renderer/src/render_backend/vulkan/render_object/: mod.rs
poisson_renderer/src/render_backend/web/: colored_mesh.rs  graphics_obj.rs  lit_colored_mesh.rs  mod.rs  per_vertex_impl.rs  texture.rs  textured_mesh.rs
poisson_renderer/src/render_backend/web/gpu_resources/: gpu_mat4.rs  gpu_texture.rs  gpu_vec4.rs  interface.rs  mod.rs
poisson_renderer/src/slang/: mod.rs  slang.cc  slang.h
rj_math/: Cargo.toml
rj_math/src/: lib.rs
shaders/: hello-world.slang  textured_mesh.slang  triangle.slang  triangle.wgsl
slang_refl/: Cargo.toml  build.rs
slang_refl/src/: lib.rs  slang.cc  slang.h
src/: blobstore.cc  lib.rs  main.rs
src/render_backend/: mod.rs
src/render_backend/vulkan/: command_buffer.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  physical_surface.rs
src/slang/: mod.rs  slang.cc  slang.h
src/utils/: fill.rs
src/vulkan/: buffer.rs  command_buffer.rs  device.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  physical_device.rs  physical_surface.rs  render_pass.rs  swapchain.rs  utils.rs
(+2 files in other folders)
