[package]
name = "rust-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = {git = "https://github.com/rust-windowing/winit.git", rev = "5199474"}
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
image = "0.25.6"
softbuffer = { version = "0.4.6", default-features = false, features = [
    "x11",
    "x11-dlopen",
    "wayland",
    "wayland-dlopen",
] }