[package]
name = "cs418_orbits"
version = "0.1.0"
edition = "2024"

[dependencies]
poisson_renderer = { path = "../poisson_renderer" }
rj = {path = "../rj"}

log = "0.4.27"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
image = "0.25.6"
instant = "0.1.13"
winit = {git = "https://github.com/rust-windowing/winit.git", rev = "5199474", features = []}
cgmath = "0.18.0"
fs-embed = "0.2.4"
include_dir = {version = "0.7.4", features=[ "metadata" ]}
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
egui = "0.32.3"


[lib]
crate-type = ["cdylib", "rlib"]