[package]
name = "cs418_texture"
version = "0.1.0"
edition = "2024"

[dependencies]
poisson_renderer = { path = "../poisson_renderer" }
rj = {path = "../rj"}

log = "0.4.27"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
image = "0.25.6"
instant = "0.1.13"
cgmath = "0.18.0"
fs-embed = "0.2.4"
include_dir = {version = "0.7.4", features=[ "metadata" ]}
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
egui = "0.32.3"
cfg-if = "1.0.1"
web-sys = { version = "0.3.77", features = [
    "Window", "Document", "HtmlInputElement", "HtmlButtonElement", "console"
]}
rand = {version = "0.10.0-rc.1" }
getrandom = { version = "0.3", features = ["wasm_js"] }
regex = "1.12.2"


[lib]
crate-type = ["cdylib", "rlib"]