[package]
name = "poisson_renderer"
version = "0.1.0"
edition = "2024"

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
winit = {git = "https://github.com/rust-windowing/winit.git", rev = "5199474", features = []}
poisson_macros = {path = "../poisson_macros" }
cgmath = "0.18.0"
cfg-if = "1.0.0"
parking_lot = "0.12.4"
async-trait = "0.1.88"
web-sys = { version = "0.3.77", features = ["Location"] }
wgpu = { version = "26" , features = ["webgl"]}
wasm-bindgen-futures = "0.4.50"
log = "0.4.27"
fern = "0.7"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.8"
wasm-bindgen = "0.2.100"
bytemuck = { version = "1.23.1", features = ["derive"] }
image = {version = "0.25.6", features = ["png"]}
anyhow = "1.0.98"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
slang_refl = { path = "../slang_refl" }
pollster = "0.4.0"
ash = "0.38.0"
ash-window = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
build-print = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]